Bug 87498 - --location-disable-3gpp leaks sensitive information in the log
Summary: --location-disable-3gpp leaks sensitive information in the log
Status: RESOLVED FIXED
Alias: None
Product: ModemManager
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: ModemManager bug user
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-19 14:33 UTC by option_Al
Modified: 2014-12-26 15:37 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description option_Al 2014-12-19 14:33:39 UTC
used modemmanager for E392 Huawei in Ubuntu 14.10 noticed from syslogs that it prints locatons then censoed it couple of days 

even done this after modem activation:

sudo mmcli -m 0 --location-disable-cdma-bs --location-disable-gps-raw --location-disable-gps-nmea --location-disable-3gpp

it does this: 

Dec 18 16:14:57 b0X ModemManager[874]: <info>  Modem /org/freedesktop/ModemManager1/Modem/0: 3GPP location updated (MCC: 'XXX', MNC: 'X', Location area code: 'X', Cell ID: 'X')

I have secured realworld address please fix modemmanager default so I won't get killed by bad people who can read location from my logs, please put the default setting not asking location info and on demand the location search.
Comment 1 Aleksander Morgado 2014-12-19 15:36:12 UTC
How about decreasing those log messages to debug level? i.e. not shown unless MM is run in debug mode.
Comment 2 Aleksander Morgado 2014-12-26 15:37:38 UTC
(In reply to Aleksander Morgado from comment #1)
> How about decreasing those log messages to debug level? i.e. not shown
> unless MM is run in debug mode.

Did this fix in git master already.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.