iface-modem-location: don't print location info to syslog with info level

Use debug level, which has to be explicitly requested by the user.

https://bugs.freedesktop.org/show_bug.cgi?id=87498